--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@slidev/cli": "^52.0.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "slidev-addon-python-runner": "^0.1.3"
   }
 }
