--- a/package.json
+++ b/package.json
@@ -4,9 +4,30 @@
   "private": true,
   "scripts": {
     "dev:intro": "cd lessons/introduction && npm run dev",
+    "dev:hello": "cd lessons/python/hello_world && npm run dev",
+    "dev:operators": "cd lessons/python/operators && npm run dev",
+    "dev:conditionals": "cd lessons/python/conditionals && npm run dev",
+    "dev:loops": "cd lessons/python/loops && npm run dev",
+    "dev:functions": "cd lessons/python/functions && npm run dev",
+    
     "build:intro": "cd lessons/introduction && npm run build",
-    "build:all": "npm run build:intro",
-    "install:lessons": "cd lessons/introduction && npm install"
+    "build:hello": "cd lessons/python/hello_world && npm run build",
+    "build:operators": "cd lessons/python/operators && npm run build",
+    "build:conditionals": "cd lessons/python/conditionals && npm run build",
+    "build:loops": "cd lessons/python/loops && npm run build",
+    "build:functions": "cd lessons/python/functions && npm run build",
+    
+    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:loops && npm run build:functions",
+    "build:python": "npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:loops && npm run build:functions",
+    
+    "install:intro": "cd lessons/introduction && npm install",
+    "install:hello": "cd lessons/python/hello_world && npm install",
+    "install:operators": "cd lessons/python/operators && npm install",
+    "install:conditionals": "cd lessons/python/conditionals && npm install",
+    "install:loops": "cd lessons/python/loops && npm install",
+    "install:functions": "cd lessons/python/functions && npm install",
+    "install:all": "npm run install:intro && npm run install:hello && npm run install:operators && npm run install:conditionals && npm run install:loops && npm run install:functions",
+    "install:python": "npm run install:hello && npm run install:operators && npm run install:conditionals && npm run install:loops && npm run install:functions"
   },
   "dependencies": {
     "@slidev/cli": "^52.0.0",
