--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,15 +1,12 @@
 name: Deploy Pages
-
 on:
   workflow_dispatch:
   push:
     branches: [master]
-
 permissions:
   contents: read
   pages: write
   id-token: write
-
 concurrency:
   group: pages
   cancel-in-progress: false
@@ -17,28 +14,30 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
+      
       - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-
+          
       - name: Setup @antfu/ni
         run: npm i -g @antfu/ni
-
-      - name: Install dependencies
+        
+      - name: Install root dependencies
         run: nci
-
-      - name: Build
+        
+      - name: Install lesson dependencies
+        run: nr install:all
+        
+      - name: Build all lessons
         run: |
           node --max-old-space-size=6144 $(which nr) build:all \
             --base /${{github.event.repository.name}}/
-
+          
       - name: Setup Pages
         uses: actions/configure-pages@v4
-
+        
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
