--- a/package.json
+++ b/package.json
@@ -3,28 +3,21 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev:intro": "slidev lessons/introduction/slides.md --port 3030",
-    "dev:hello": "slidev lessons/python/hello_world/slides.md --port 3030",
-    "dev:operators": "slidev lessons/python/operators/slides.md --port 3030",
-    "dev:conditionals": "slidev lessons/python/conditionals/slides.md --port 3030",
-    "dev:loops": "slidev lessons/python/loops/slides.md --port 3030",
-    "dev:functions": "slidev lessons/python/functions/slides.md --port 3030",
+    "dev:intro": "slidev --base lessons/introduction/ lessons/introduction/slides.md --port 3030",
+    "dev:hello": "slidev --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --port 3030",
+    "dev:operators": "slidev --base /lessons/python/operators/ lessons/python/operators/slides.md --port 3030",
+    "dev:conditionals": "slidev --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --port 3030",
+    "dev:loops": "slidev --base /lessons/python/loops/ lessons/python/loops/slides.md --port 3030",
+    "dev:functions": "slidev --base /lessons/python/functions/ lessons/python/functions/slides.md --port 3030",
 
-    "build:intro": "cd lessons/introduction && npm run build",
-    "build:hello": "cd lessons/python/hello_world && npm run build",
-    "build:operators": "cd lessons/python/operators && npm run build",
-    "build:conditionals": "cd lessons/python/conditionals && npm run build",
-    "build:loops": "cd lessons/python/loops && npm run build",
-    "build:functions": "cd lessons/python/functions && npm run build",
+    "build:intro": "slidev build --base /lessons/introduction/ lessons/introduction/slides.md --out ../../dist/lessons/introduction",
+    "build:hello": "slidev build --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --out ../../../dist/lessons/python/hello_world",
+    "build:operators": "slidev build --base /lessons/python/operators/ lessons/python/operators/slides.md --out ../../../dist/lessons/python/operators",
+    "build:conditionals": "slidev build --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --out ../../../dist/lessons/python/conditionals",
+    "build:loops": "slidev build --base /lessons/python/loops/ lessons/python/loops/slides.md --out ../../../dist/lessons/python/loops",
+    "build:functions": "slidev build --base /lessons/python/functions/ lessons/python/functions/slides.md --out ../../../dist/lessons/python/functions",
+
     "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:loops && npm run build:functions",
-
-    "install:intro": "cd lessons/introduction && npm install",
-    "install:hello": "cd lessons/python/hello_world && npm install",
-    "install:operators": "cd lessons/python/operators && npm install",
-    "install:conditionals": "cd lessons/python/conditionals && npm install",
-    "install:loops": "cd lessons/python/loops && npm install",
-    "install:functions": "cd lessons/python/functions && npm install",
-    "install:all": "npm run install:intro && npm run install:hello && npm run install:operators && npm run install:conditionals && npm run install:loops && npm run install:functions"
   },
   "dependencies": {
     "@slidev/cli": "^51.8.2",
