--- a/package.json
+++ b/package.json
@@ -3,29 +3,38 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "install": "npm install",
-    "setup": "npm install",
-    "dev:intro": "slidev --base lessons/introduction/ lessons/introduction/slides.md --port 3030",
+    "dev:intro": "slidev --base /lessons/introduction/ lessons/introduction/slides.md --port 3030",
     "dev:hello": "slidev --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --port 3030",
     "dev:operators": "slidev --base /lessons/python/operators/ lessons/python/operators/slides.md --port 3030",
     "dev:conditionals": "slidev --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --port 3030",
-    "dev:loops": "slidev --base /lessons/python/loops/ lessons/python/loops/slides.md --port 3030",
+    "dev:while_loops": "slidev --base /lessons/python/while_loops/ lessons/python/while_loops/slides.md --port 3030",
+    "dev:for_loops": "slidev --base /lessons/python/for_loops/ lessons/python/for_loops/slides.md --port 3030",
     "dev:functions": "slidev --base /lessons/python/functions/ lessons/python/functions/slides.md --port 3030",
-
     "build:intro": "slidev build --base /lessons/introduction/ lessons/introduction/slides.md --out ../../dist/lessons/introduction",
     "build:hello": "slidev build --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --out ../../../dist/lessons/python/hello_world",
     "build:operators": "slidev build --base /lessons/python/operators/ lessons/python/operators/slides.md --out ../../../dist/lessons/python/operators",
     "build:conditionals": "slidev build --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --out ../../../dist/lessons/python/conditionals",
-    "build:loops": "slidev build --base /lessons/python/loops/ lessons/python/loops/slides.md --out ../../../dist/lessons/python/loops",
+    "build:while_loops": "slidev build --base /lessons/python/while_loops/ lessons/python/while_loops/slides.md --out ../../../dist/lessons/python/while_loops",
+    "build:for_loops": "slidev build --base /lessons/python/for_loops/ lessons/python/for_loops/slides.md --out ../../../dist/lessons/python/for_loops",
     "build:functions": "slidev build --base /lessons/python/functions/ lessons/python/functions/slides.md --out ../../../dist/lessons/python/functions",
-
-    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:loops && npm run build:functions"
+    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:while_loops && npm run build:for_loops && npm run build:functions",
+    "export:intro": "slidev export --per-slide --format pdf --output exports/introduction.pdf lessons/introduction/slides.md",
+    "export:hello": "slidev export --per-slide --format pdf --output exports/python-hello-world.pdf lessons/python/hello_world/slides.md",
+    "export:operators": "slidev export --per-slide --format pdf --output exports/python-operators.pdf lessons/python/operators/slides.md",
+    "export:conditionals": "slidev export --per-slide --format pdf --output exports/python-conditionals.pdf lessons/python/conditionals/slides.md",
+    "export:while_loops": "slidev export --per-slide --format pdf --output exports/python-while-loops.pdf lessons/python/while_loops/slides.md",
+    "export:for_loops": "slidev export --per-slide --format pdf --output exports/python-for-loops.pdf lessons/python/for_loops/slides.md",
+    "export:functions": "slidev export --per-slide --format pdf --output exports/python-functions.pdf lessons/python/functions/slides.md",
+    "export:all": "npm run export:intro && npm run export:hello && npm run export:operators && npm run export:conditionals && npm run export:while_loops && npm run export:for_loops && npm run export:functions"
   },
   "dependencies": {
-    "@slidev/cli": "^51.8.2",
+    "@slidev/cli": "^52.0.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "slidev-addon-python-runner": "^0.1.3",
-    "vue": "^3.5.17"
+    "vue": "^3.5.18"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.54.1"
   }
 }
