--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - name: Setup @antfu/ni
-        run: npm i -g @antfu/ni
 
-      - name: Install root dependencies
-        run: nci
+      - name: Clean install (remove lockfile and node_modules)
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build all lessons
         run: |
