--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,7 @@ jobs:
 
       - name: Build all lessons
         run: |
-          node --max-old-space-size=6144 $(which nr) build:all \
-            --base /${{github.event.repository.name}}/
+          nr build:all --base /${{github.event.repository.name}}/
 
       - name: Generate index.html
         run: |
