--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build all lessons
         run: |
-          nr build:all --base /${{github.event.repository.name}}/
+          npm run build:all --base /${{github.event.repository.name}}/
 
       - name: Generate index.html
         run: |
