--- a/package.json
+++ b/package.json
@@ -12,6 +12,19 @@
     "dev:functions": "slidev --base /lessons/python/functions/ lessons/python/functions/slides.md --port 3030",
     "dev:recap": "slidev --base /lessons/python/recap/ lessons/python/recap/slides.md --port 3030",
     "dev:data_analysis": "slidev --base /lessons/data_science/data_analysis/ lessons/data_science/data_analysis/slides.md --port 3030",
+    "dev:lists": "slidev --base /lessons/python/lists/ lessons/python/lists/slides.md --port 3030",
+    "dev:statistics_with_lists": "slidev --base /lessons/data_science/statistics_with_lists/ lessons/data_science/statistics_with_lists/slides.md --port 3030",
+    "export:intro": "slidev export --per-slide --format pdf --output exports/introduction.pdf lessons/introduction/slides.md",
+    "export:hello": "slidev export --per-slide --format pdf --output exports/python-hello-world.pdf lessons/python/hello_world/slides.md",
+    "export:operators": "slidev export --per-slide --format pdf --output exports/python-operators.pdf lessons/python/operators/slides.md",
+    "export:conditionals": "slidev export --per-slide --format pdf --output exports/python-conditionals.pdf lessons/python/conditionals/slides.md",
+    "export:while_loops": "slidev export --per-slide --format pdf --output exports/python-while-loops.pdf lessons/python/while_loops/slides.md",
+    "export:for_loops": "slidev export --per-slide --format pdf --output exports/python-for-loops.pdf lessons/python/for_loops/slides.md",
+    "export:functions": "slidev export --per-slide --format pdf --output exports/python-functions.pdf lessons/python/functions/slides.md",
+    "export:recap": "slidev export --per-slide --format pdf --timeout 60000 --output exports/python-recap.pdf lessons/python/recap/slides.md",
+    "export:data_analysis": "slidev export --per-slide --timeout 60000 --format pdf --output exports/data-science-data-analysis.pdf lessons/data_science/data_analysis/slides.md",
+    "export:lists": "slidev export --per-slide --timeout 60000 --format pdf --output exports/python-lists.pdf lessons/python/lists/slides.md",
+    "export:statistics_with_lists": "slidev export --per-slide --format pdf --output exports/data-science-statistics-with-lists.pdf lessons/data_science/statistics_with_lists/slides.md",
     "build:intro": "slidev build --base /lessons/introduction/ lessons/introduction/slides.md --out ../../dist/lessons/introduction",
     "build:hello": "slidev build --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --out ../../../dist/lessons/python/hello_world",
     "build:operators": "slidev build --base /lessons/python/operators/ lessons/python/operators/slides.md --out ../../../dist/lessons/python/operators",
@@ -21,17 +34,9 @@
     "build:functions": "slidev build --base /lessons/python/functions/ lessons/python/functions/slides.md --out ../../../dist/lessons/python/functions",
     "build:recap": "slidev build --base /lessons/python/recap/ lessons/python/recap/slides.md --out ../../../dist/lessons/python/recap",
     "build:data_analysis": "slidev build --base /lessons/data_science/data_analysis/ lessons/data_science/data_analysis/slides.md --out ../../../dist/lessons/data_science/data_analysis",
-    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:while_loops && npm run build:for_loops && npm run build:functions && npm run build:recap && npm run build:data_analysis",
-    "export:intro": "slidev export --per-slide --format pdf --output exports/introduction.pdf lessons/introduction/slides.md",
-    "export:hello": "slidev export --per-slide --format pdf --output exports/python-hello-world.pdf lessons/python/hello_world/slides.md",
-    "export:operators": "slidev export --per-slide --format pdf --output exports/python-operators.pdf lessons/python/operators/slides.md",
-    "export:conditionals": "slidev export --per-slide --format pdf --output exports/python-conditionals.pdf lessons/python/conditionals/slides.md",
-    "export:while_loops": "slidev export --per-slide --format pdf --output exports/python-while-loops.pdf lessons/python/while_loops/slides.md",
-    "export:for_loops": "slidev export --per-slide --format pdf --output exports/python-for-loops.pdf lessons/python/for_loops/slides.md",
-    "export:functions": "slidev export --per-slide --format pdf --output exports/python-functions.pdf lessons/python/functions/slides.md",
-    "export:recap": "slidev export --per-slide --format pdf --output exports/python-recap.pdf lessons/python/recap/slides.md",
-    "export:data_analysis": "slidev export --per-slide --format pdf --output exports/data-science-data-analysis.pdf lessons/data_science/data_analysis/slides.md",
-    "export:all": "npm run export:intro && npm run export:hello && npm run export:operators && npm run export:conditionals && npm run export:while_loops && npm run export:for_loops && npm run export:functions"
+    "build:lists": "slidev build --base /lessons/python/lists/ lessons/python/lists/slides.md --out ../../../dist/lessons/python/lists",
+    "build:statistics_with_lists": "slidev build --base /lessons/data_science/statistics_with_lists/ lessons/data_science/statistics_with_lists/slides.md --out ../../../dist/lessons/data_science/statistics_with_lists",
+    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:while_loops && npm run build:for_loops && npm run build:functions && npm run build:recap && npm run build:data_analysis && npm run build:lists && npm run build:statistics_with_lists"
   },
   "dependencies": {
     "@slidev/cli": "^52.0.0",
