--- a/package.json
+++ b/package.json
@@ -22,21 +22,9 @@
     "export:for_loops": "slidev export --per-slide --format pdf --output exports/python-for-loops.pdf lessons/python/for_loops/slides.md",
     "export:functions": "slidev export --per-slide --format pdf --output exports/python-functions.pdf lessons/python/functions/slides.md",
     "export:recap": "slidev export --per-slide --format pdf --timeout 60000 --output exports/python-recap.pdf lessons/python/recap/slides.md",
-    "export:data_analysis": "slidev export --per-slide --timeout 60000 --format pdf --output exports/data-science-data-analysis.pdf lessons/data_science/data_analysis/slides.md",
+    "export:data_analysis": "slidev export --per-slide --format pdf --output exports/data-science-data-analysis.pdf lessons/data_science/data_analysis/slides.md",
     "export:lists": "slidev export --per-slide --timeout 60000 --format pdf --output exports/python-lists.pdf lessons/python/lists/slides.md",
     "export:statistics_with_lists": "slidev export --per-slide --format pdf --output exports/data-science-statistics-with-lists.pdf lessons/data_science/statistics_with_lists/slides.md",
-    "build:intro": "slidev build --base /lessons/introduction/ lessons/introduction/slides.md --out ../../dist/lessons/introduction",
-    "build:hello": "slidev build --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --out ../../../dist/lessons/python/hello_world",
-    "build:operators": "slidev build --base /lessons/python/operators/ lessons/python/operators/slides.md --out ../../../dist/lessons/python/operators",
-    "build:conditionals": "slidev build --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --out ../../../dist/lessons/python/conditionals",
-    "build:while_loops": "slidev build --base /lessons/python/while_loops/ lessons/python/while_loops/slides.md --out ../../../dist/lessons/python/while_loops",
-    "build:for_loops": "slidev build --base /lessons/python/for_loops/ lessons/python/for_loops/slides.md --out ../../../dist/lessons/python/for_loops",
-    "build:functions": "slidev build --base /lessons/python/functions/ lessons/python/functions/slides.md --out ../../../dist/lessons/python/functions",
-    "build:recap": "slidev build --base /lessons/python/recap/ lessons/python/recap/slides.md --out ../../../dist/lessons/python/recap",
-    "build:data_analysis": "slidev build --base /lessons/data_science/data_analysis/ lessons/data_science/data_analysis/slides.md --out ../../../dist/lessons/data_science/data_analysis",
-    "build:lists": "slidev build --base /lessons/python/lists/ lessons/python/lists/slides.md --out ../../../dist/lessons/python/lists",
-    "build:statistics_with_lists": "slidev build --base /lessons/data_science/statistics_with_lists/ lessons/data_science/statistics_with_lists/slides.md --out ../../../dist/lessons/data_science/statistics_with_lists",
-    "build:all": "npm run build:intro && npm run build:hello && npm run build:operators && npm run build:conditionals && npm run build:while_loops && npm run build:for_loops && npm run build:functions && npm run build:recap && npm run build:data_analysis && npm run build:lists && npm run build:statistics_with_lists"
   },
   "dependencies": {
     "@slidev/cli": "^52.0.0",
