--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,17 @@
     "slidev.preview-sync": true,
     "cSpell.enabled": true,
     "cSpell.words": [
-        "slidev",
-        "Tablular",
-        "BIGD",
-        "Peticolas",
-        "autorun",
-        "elif",
-        "docstring",
-        "chatbot",
-        "courseworks",
-        "venv",
+      "autorun",
+      "BIGD",
+      "chatbot",
+      "courseworks",
+      "docstring",
+      "elif",
+      "groupby",
+      "Peticolas",
+      "slidev",
+      "Tablular",
+      "venv"
     ],
     "slidev.dev-command": "nvm use --lts && npm exec -c 'slidev ${args}'",
     "command-runner.commands": {
